--- a/stylesheet.css
+++ b/stylesheet.css
@@ -206,7 +206,80 @@ height:auto;
     }
     
   .news-img {
-   max-height: 200px;
+  max-height: 200px;
   width: auto;
    margin: 1em;
   }
+  
+ .fader {
+    /* Giving equal sizes to each element */
+    width:    200px;
+    height:  auto;
+  margin: auto;
+
+    /* Positioning elements in lines */
+    display:  inline-block;
+
+    /* This is necessary for position:absolute to work as desired */
+    position: relative;
+
+    /* Preventing zoomed images to grow outside their elements */
+    overflow: hidden; }
+
+
+    .fader img {
+        /* Stretching the images to fill whole elements */
+        width:       100%;
+        height:      100%;
+
+        /* Preventing blank space below the image */
+        line-height: 0;
+          /* A one-second transition was to disturbing for me */
+        -webkit-transition: all 0.3s ease;
+        -moz-transition:    all 0.3s ease;
+        -o-transition:      all 0.3s ease;
+        -ms-transition:     all 0.3s ease;
+        transition:         all 0.3s ease; }
+
+        .fader img:hover {
+            /* Making images appear bigger and transparent on mouseover */
+            opacity: 0.5;
+            width:   120%;
+            height:  120%; }
+ .fader .text {
+        /* Placing text behind images */
+        z-index: -10;     
+
+        /* Positioning text top-left conrner in the middle of elements */
+        position: absolute;
+        top:      50%;
+        left:     50%; }
+
+        .fader .text p {
+            /* Positioning text contents 50% left and top relative
+               to text container's top left corner */
+            margin-top:  -50%; 
+            margin-left: -50%; }
+            
+            .thumbnail {
+  height: auto;
+  max-width: 100px;
+   margin:auto;
+  }
+  
+  
+  
+  
+  hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
