--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,35 +1,33 @@
-
-/*
-font-family: 'Montserrat', sans-serif;
+/*font-family: 'Montserrat', sans-serif;
 font-family: 'Raleway', sans-serif;
 font-family: 'Nunito', sans-serif;
-font-family: 'Philosopher', sans-serif;
-
-*/
+font-family: 'Philosopher', sans-serif;*/
 
 .header-img {
- max-width:100%;
- height: auto;
+    max-width: 100%;
+    height: auto;
 }
 
 a {
- text-decoration: none;
- color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
+
 a:hover {
- text-decoration: none;
- color: slategray;
+    text-decoration: none;
+    color: slategray;
 }
-body
 
-{font-family: 'Montserrat', sans-serif;}
+body {
+    font-family: 'Montserrat', sans-serif;
+}
 
-.Navbar-brand{
+.Navbar-brand {
     font-size: large;
 }
 
 .navbar-expand-lg {
- line-height: 3em;
+    line-height: 3em;
 }
 
 .navbar {
@@ -37,126 +35,130 @@ body
 }
 
 h1 {
- padding-top: 1em;
- padding-bottom: .25em;
+    padding-top: 1em;
+    padding-bottom: .25em;
 }
 
 
 /*This is the css code for my table */
 
- .column-headers-background {
-     z-index: 1;
-     width: 115px;
-     text-align: right;
-     font-weight: bolder;
- }
+.column-headers-background {
+    z-index: 1;
+    width: 115px;
+    text-align: right;
+    font-weight: bolder;
+}
 
- .row-headers-background {
-     z-index: 1;
-     width: 50px;
-     
- }
+.row-headers-background {
+    z-index: 1;
+    width: 50px;
 
- .waffle {
-     text-align: right; 
-     font-size: 12pt;
-     vertical-align: bottom;
-     white-space: nowrap;
-     direction: ltr;
-     padding: 2px 3px 2px 3px;
-     font-family: 'Raleway', sans-serif;
- }
- .waffle .negative {
-     color: red;
-       font-weight: bold;
- }
+}
 
- .waffle .positive {
-     color: #2ed573;
-     font-weight: bold;
- }
+.waffle {
+    text-align: right;
+    font-size: 12pt;
+    vertical-align: bottom;
+    white-space: nowrap;
+    direction: ltr;
+    padding: 2px 3px 2px 3px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.waffle .negative {
+    color: red;
+    font-weight: bold;
+}
+
+.waffle .positive {
+    color: #2ed573;
+    font-weight: bold;
+}
 
 .waffle a {
- color: blue;
- 
+    color: blue;
+
 }
-.waffle a:hover{
- color: darkblue;
+
+.waffle a:hover {
+    color: darkblue;
 }
 
 /* The code for my footer */
 
-#social-buttons 
-{padding-top: 1em;
- 
+#social-buttons {
+    padding-top: 1em;
+
 }
 
-
 #footer-custom {
- background-color: #f8f9fa;
- padding-top: 2em;
- 
+    background-color: #f8f9fa;
+    padding-top: 2em;
+
 }
 
 #form-container {
- /*padding-top: 2em;*/
- padding-bottom: 2em;
+    /*padding-top: 2em;*/
+    padding-bottom: 2em;
 
 }
 
-  .form-button-collapse {
-padding: 1em;
-margin-bottom: 1em;
-  margin-top: 1em;
-  font-family: sans-serif;
-  background-color: black;
-border-style: solid;
-border-width: thin;
-border-color: black;
-color: white;
-font-weight: bold;
-display: block;
-width: 65%;
- }
- 
-  .form-button-collapse:hover {
-  padding: 1em;
-  font-family: sans-serif;
-  background-color: white;
-  border-style: solid;
-border-width: thin;
-border-color: black;
-color: black;
-font-weight: bold;
-  
- }
- /*Code for sign up form container */
+.form-button-collapse {
+    padding: 1em;
+    margin-bottom: 1em;
+    margin-top: 1em;
+    font-family: sans-serif;
+    background-color: black;
+    border-style: solid;
+    border-width: thin;
+    border-color: black;
+    color: white;
+    font-weight: bold;
+    display: block;
+    width: 65%;
+}
+
+.form-button-collapse:hover {
+    padding: 1em;
+    font-family: sans-serif;
+    background-color: white;
+    border-style: solid;
+    border-width: thin;
+    border-color: black;
+    color: black;
+    font-weight: bold;
+
+}
+
+/*Code for sign up form container */
+
 .sign-up-container {
- /*border-top-style: solid;
+    /*border-top-style: solid;
  border-top-color: black;
  border-top-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: black;
  border-bottom-width: 1px;*/
- padding-top: 2em;
- padding-bottom: 2em;
- margin-top: 0;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    margin-top: 0;
 }
 
 
 
 #services {
-padding-top: 1.5em;
- padding-bottom: 3em;
- background-color: #f8f9fa;
+    padding-top: 1.5em;
+    padding-bottom: 3em;
+    background-color: #f8f9fa;
 }
+
 #yahoologo {
-  animation-duration:4s;
-  animation-delay: 2s;
-  animation-iteration-count: 1;
- position:absolute;
- width:auto;
-height:auto;
+    animation-duration: 4s;
+    animation-delay: 2s;
+    animation-iteration-count: 1;
+    position: absolute;
+    width: auto;
+    height: auto;
 }
 
 .hiddenlogo {
@@ -165,7 +167,7 @@ height:auto;
 
 
 #photo-login .photo-login {
-    width: 100%; 
+    width: 100%;
     height: auto;
 }
 
@@ -177,110 +179,175 @@ height:auto;
 
 .center {
     display: block;
-  margin: auto;
+    margin: auto;
     width: 50%;
 }
 
 .services-col {
- max-width: 50%;
+    max-width: 50%;
 }
 
- #wide-version-of-table {
-        display: block;
-    }
+#wide-version-of-table {
+    display: block;
+}
 
-    #narrow-version-of-table {
+#narrow-version-of-table {
+    display: none;
+}
+
+@media (max-width:765px)
+/* The maximum width for the mobile device version. */
+
+    {
+    #wide-version-of-table {
         display: none;
     }
-
-    @media (max-width:765px)
-    /* The maximum width for the mobile device version. */
-
-        {
-        #wide-version-of-table {
-            display: none;
-        }
-        #narrow-version-of-table {
-            display: block;
-        }
+    #narrow-version-of-table {
+        display: block;
     }
-    
-  .news-img {
-  max-height: 200px;
-  width: auto;
-   margin: 1em;
-  }
-  
- .fader {
+}
+
+.news-img {
+    max-height: 200px;
+    width: auto;
+    margin: 1em;
+}
+
+.fader {
     /* Giving equal sizes to each element */
-    width:    200px;
-    height:  auto;
-  margin: auto;
+    width: 200px;
+    height: auto;
+    margin: auto;
 
     /* Positioning elements in lines */
-    display:  inline-block;
+    display: inline-block;
 
     /* This is necessary for position:absolute to work as desired */
     position: relative;
 
     /* Preventing zoomed images to grow outside their elements */
-    overflow: hidden; }
+    overflow: hidden;
+}
 
 
-    .fader img {
-        /* Stretching the images to fill whole elements */
-        width:       100%;
-        height:      100%;
+.fader img {
+    /* Stretching the images to fill whole elements */
+    width: 100%;
+    height: 100%;
 
-        /* Preventing blank space below the image */
-        line-height: 0;
-          /* A one-second transition was to disturbing for me */
-        -webkit-transition: all 0.3s ease;
-        -moz-transition:    all 0.3s ease;
-        -o-transition:      all 0.3s ease;
-        -ms-transition:     all 0.3s ease;
-        transition:         all 0.3s ease; }
+    /* Preventing blank space below the image */
+    line-height: 0;
+    /* A one-second transition was to disturbing for me */
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
 
-        .fader img:hover {
-            /* Making images appear bigger and transparent on mouseover */
-            opacity: 0.5;
-            width:   120%;
-            height:  120%; }
- .fader .text {
-        /* Placing text behind images */
-        z-index: -10;     
+.fader img:hover {
+    /* Making images appear bigger and transparent on mouseover */
+    opacity: 0.5;
+    width: 120%;
+    height: 120%;
+}
 
-        /* Positioning text top-left conrner in the middle of elements */
-        position: absolute;
-        top:      50%;
-        left:     50%; }
+.fader .text {
+    /* Placing text behind images */
+    z-index: -10;
 
-        .fader .text p {
-            /* Positioning text contents 50% left and top relative
+    /* Positioning text top-left conrner in the middle of elements */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.fader .text p {
+    /* Positioning text contents 50% left and top relative
                to text container's top left corner */
-            margin-top:  -50%; 
-            margin-left: -50%; }
-            
-            .thumbnail {
-  height: auto;
-  max-width: 100px;
-   margin:auto;
-  }
-  
-  hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
+    margin-top: -50%;
+    margin-left: -50%;
 }
 
-hr {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  border: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+.thumbnail {
+    height: auto;
+    max-width: 100px;
+    margin: auto;
 }
 
 
+.card-deck {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
 
+.card-deck .card {
+    margin-bottom: 15px;
+}
+
+@media (min-width: 765px) {
+    .card-deck {
+        -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+        margin-right: -15px;
+        margin-left: -15px;
+    }
+    .card-deck .card {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex: 1 0 0%;
+        flex: 1 0 0%;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        margin-right: 15px;
+        margin-bottom: 0;
+        margin-left: 15px;
+    }
+}
+@media (min-width: 765px) {
+.news-container {
     
-   
+    
+}
+}
+
+.container {
+    min-width: 992px
+    width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 576px) {
+  .container {
+    width: 100%;
+    margin-right: auto;
+  margin-left: auto;
+  }
+}
+
+@media (min-width: 768px) {
+   .container {width: 100%;
+    margin-right: auto;
+  margin-left: auto;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+     width: 100%;
+    margin-right: auto;
+  margin-left: auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+     width: 100%;
+    margin-right: auto;
+  margin-left: auto;
+  }
+}
