--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,9 @@
 /*font-family: 'Montserrat', sans-serif;
 font-family: 'Raleway', sans-serif;
 font-family: 'Nunito', sans-serif;
-font-family: 'Philosopher', sans-serif;*/
+font-family: 'Philosopher', sans-serif;
+font-family: 'Playfair Display', serif;
+*/
 
 .header-img {
     max-width: 100%;
@@ -37,6 +39,8 @@ body {
 h1 {
     padding-top: 1em;
     padding-bottom: .25em;
+     color: #430297;
+    font-weight: bold;
 }
 
 
@@ -130,20 +134,47 @@ h1 {
 
 }
 
-/*Code for sign up form container */
+
+
+.sign-up-header {
+    text-align: left;
+}
+
 
 .sign-up-container {
-    /*border-top-style: solid;
- border-top-color: black;
- border-top-width: 1px;
- border-bottom-style: solid;
- border-bottom-color: black;
- border-bottom-width: 1px;*/
     padding-top: 2em;
     padding-bottom: 2em;
     margin-top: 0;
 }
 
+@media (max-width: 765px) {
+    .sign-up-header {
+        width: 100%;
+        text-align: center;
+        margin-right: auto;
+        margin-left: auto;
+
+    }
+}
+
+@media (max-width: 768px) {
+    .form-button-collapse {
+
+        padding: 1em;
+        margin-bottom: 1em;
+        margin-top: 1em;
+        font-family: sans-serif;
+        background-color: black;
+        border-style: solid;
+        border-width: thin;
+        border-color: black;
+        color: white;
+        font-weight: bold;
+        display: block;
+        text-align: center;
+        width: 100%;
+    }
+}
 
 
 #services {
@@ -175,6 +206,10 @@ h1 {
 
 #submit-button {
     margin-bottom: 1em;
+    background-color: #430297;
+    padding-right: 2em;
+    padding-left: 2em;
+    border: none;
 }
 
 .center {
@@ -187,25 +222,6 @@ h1 {
     max-width: 50%;
 }
 
-#wide-version-of-table {
-    display: block;
-}
-
-#narrow-version-of-table {
-    display: none;
-}
-
-@media (max-width:765px)
-/* The maximum width for the mobile device version. */
-
-    {
-    #wide-version-of-table {
-        display: none;
-    }
-    #narrow-version-of-table {
-        display: block;
-    }
-}
 
 .news-img {
     max-height: 200px;
@@ -306,48 +322,105 @@ h1 {
         margin-left: 15px;
     }
 }
-@media (min-width: 765px) {
+
 .news-container {
-    
-    
-}
+    min-width: 992px width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-.container {
-    min-width: 992px
+@media (max-width: 765px) {
+    .news-container {
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+.navbar-brand {
+    /*font-family: 'Playfair Display', serif;*/
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+
+.navbar-brand span {
+    color: #430297;
+    font-weight: bold;
+
+}
+
+h4 {
+    color: #430297;
+    font-weight: bold;
+}
+
+.collapse-right {
+    height: auto;
+    width: auto;
+}
+
+.collapse-right.height {
+    float: right;
+    position: relative;
+    height: 0;
+    -webkit-transition: height 0.35s ease;
+    -moz-transition: height 0.35s ease;
+    -o-transition: height 0.35s ease;
+    transition: height 0.35s ease;
+
+}
+
+.collapse-right.width {
+    float: right;
+    position: relative;
     width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-@media (min-width: 576px) {
-  .container {
-    width: 100%;
-    margin-right: auto;
-  margin-left: auto;
-  }
+    overflow: hidden;
+    -webkit-transition: width 0.35s ease;
+    -moz-transition: width 0.35s ease;
+    -o-transition: width 0.35s ease;
+    transition: width 0.35s ease;
+
 }
 
-@media (min-width: 768px) {
-   .container {width: 100%;
-    margin-right: auto;
-  margin-left: auto;
-  }
+.collapse-right.in.width {
+    width: auto;
+
 }
 
-@media (min-width: 992px) {
-  .container {
-     width: 100%;
-    margin-right: auto;
-  margin-left: auto;
-  }
+.collapse-right.in.height {
+    height: auto;
+
 }
 
-@media (min-width: 1200px) {
-  .container {
-     width: 100%;
-    margin-right: auto;
-  margin-left: auto;
-  }
+
+#wide-version-of-table {
+    display: block;
 }
+
+#narrow-version-of-table {
+    display: none;
+}
+
+@media (max-width:765px)
+/* The maximum width for the mobile device version. */
+
+    {
+    #wide-version-of-table {
+        display: none;
+    }
+    #narrow-version-of-table {
+        display: block;
+    }
+}
+
+.container-services-wide {
+    width: 50%;
+    vertical-align: central;
+    margin: auto;
+    padding-bottom: 2em;
+}
+.zoom:hover {
+    transform: scale(1.25);}
